src/private/pcre.h


#define PCRE_MAJOR          8
#define PCRE_MINOR          36
#define PCRE_DATE           2014-09-26
#define PCRE_CASELESS           0x00000001  
#define PCRE_MULTILINE          0x00000002  
#define PCRE_DOTALL             0x00000004  
#define PCRE_EXTENDED           0x00000008  
#define PCRE_ANCHORED           0x00000010  
#define PCRE_DOLLAR_ENDONLY     0x00000020  
#define PCRE_EXTRA              0x00000040  
#define PCRE_NOTBOL             0x00000080  
#define PCRE_NOTEOL             0x00000100  
#define PCRE_UNGREEDY           0x00000200  
#define PCRE_NOTEMPTY           0x00000400  
#define PCRE_UTF8               0x00000800  
#define PCRE_NO_AUTO_CAPTURE    0x00001000  
#define PCRE_NO_UTF8_CHECK      0x00002000  
#define PCRE_AUTO_CALLOUT       0x00004000  
#define PCRE_PARTIAL            0x00008000  
#define PCRE_DFA_SHORTEST       0x00010000  
#define PCRE_DFA_RESTART        0x00020000  
#define PCRE_FIRSTLINE          0x00040000  
#define PCRE_ERROR_NOMATCH          (-1)
#define PCRE_ERROR_NULL             (-2)
#define PCRE_ERROR_BADOPTION        (-3)
#define PCRE_ERROR_BADMAGIC         (-4)
#define PCRE_ERROR_UNKNOWN_NODE     (-5)  
#define PCRE_ERROR_NOMEMORY         (-6)
#define PCRE_ERROR_NOSUBSTRING      (-7)
#define PCRE_ERROR_MATCHLIMIT       (-8)
#define PCRE_ERROR_CALLOUT          (-9)  
#define PCRE_ERROR_BADUTF8         (-10)  
#define PCRE_ERROR_BADUTF8_OFFSET  (-11)  
#define PCRE_ERROR_PARTIAL         (-12)
#define PCRE_ERROR_BADPARTIAL      (-13)
#define PCRE_ERROR_INTERNAL        (-14)
#define PCRE_ERROR_BADCOUNT        (-15)
#define PCRE_ERROR_DFA_UITEM       (-16)
#define PCRE_ERROR_DFA_UCOND       (-17)
#define PCRE_ERROR_DFA_UMLIMIT     (-18)
#define PCRE_ERROR_DFA_WSSIZE      (-19)
#define PCRE_ERROR_DFA_RECURSE     (-20)
#define PCRE_INFO_OPTIONS            0
#define PCRE_INFO_SIZE               1
#define PCRE_INFO_CAPTURECOUNT       2
#define PCRE_INFO_BACKREFMAX         3
#define PCRE_INFO_FIRSTBYTE          4
#define PCRE_INFO_FIRSTCHAR          4  
#define PCRE_INFO_FIRSTTABLE         5
#define PCRE_INFO_LASTLITERAL        6
#define PCRE_INFO_NAMEENTRYSIZE      7
#define PCRE_INFO_NAMECOUNT          8
#define PCRE_INFO_NAMETABLE          9
#define PCRE_INFO_STUDYSIZE         10
#define PCRE_INFO_DEFAULT_TABLES    11
#define PCRE_CONFIG_UTF8                    0
#define PCRE_CONFIG_NEWLINE                 1
#define PCRE_CONFIG_LINK_SIZE               2
#define PCRE_CONFIG_POSIX_MALLOC_THRESHOLD  3
#define PCRE_CONFIG_MATCH_LIMIT             4
#define PCRE_CONFIG_STACKRECURSE            5
#define PCRE_CONFIG_UNICODE_PROPERTIES      6
#define PCRE_EXTRA_STUDY_DATA             0x0001
#define PCRE_EXTRA_MATCH_LIMIT            0x0002
#define PCRE_EXTRA_CALLOUT_DATA           0x0004
#define PCRE_EXTRA_TABLES                 0x0008
struct real_pcre;                 
typedef struct real_pcre pcre;
typedef const char *PCRE_SPTR;
typedef struct pcre_extra {
  unsigned long int flags;        
  void *study_data;               
  unsigned long int match_limit;  
  void *callout_data;             
  const unsigned char *tables;    
  unsigned long int match_limit_recursion; 
  unsigned char **mark;           
  void *executable_jit;           
} pcre_extra;
typedef struct pcre_callout_block {
  int          version;           
  int          callout_number;    
  int         *offset_vector;     
  PCRE_SPTR    subject;           
  int          subject_length;    
  int          start_match;       
  int          current_position;  
  int          capture_top;       
  int          capture_last;      
  void        *callout_data;      
  int          pattern_position;  
  int          next_item_length;  
  const unsigned char *mark;      
} pcre_callout_block;
typedef struct pcre16_callout_block {
  int          version;           
  int          callout_number;    
  int         *offset_vector;     
  PCRE_SPTR16  subject;           
  int          subject_length;    
  int          start_match;       
  int          current_position;  
  int          capture_top;       
  int          capture_last;      
  void        *callout_data;      
  int          pattern_position;  
  int          next_item_length;  
  const PCRE_UCHAR16 *mark;       
} pcre16_callout_block;
typedef struct pcre32_callout_block {
  int          version;           
  int          callout_number;    
  int         *offset_vector;     
  PCRE_SPTR32  subject;           
  int          subject_length;    
  int          start_match;       
  int          current_position;  
  int          capture_top;       
  int          capture_last;      
  void        *callout_data;      
  int          pattern_position;  
  int          next_item_length;  
  const PCRE_UCHAR32 *mark;       
} pcre32_callout_block;
PCRE_EXP_DECL void *(*pcre_malloc)(size_t);
PCRE_EXP_DECL void  (*pcre_free)(void *);
PCRE_EXP_DECL void *(*pcre_stack_malloc)(size_t);
PCRE_EXP_DECL void  (*pcre_stack_free)(void *);
PCRE_EXP_DECL int   (*pcre_callout)(pcre_callout_block *);
PCRE_EXP_DECL int   (*pcre_stack_guard)(void);
PCRE_EXP_DECL int   (*pcre16_callout)(pcre16_callout_block *);
PCRE_EXP_DECL int   (*pcre16_stack_guard)(void);
PCRE_EXP_DECL int   (*pcre32_callout)(pcre32_callout_block *);
PCRE_EXP_DECL int   (*pcre32_stack_guard)(void);
PCRE_EXP_DECL void *pcre_malloc(size_t);
PCRE_EXP_DECL void  pcre_free(void *);
PCRE_EXP_DECL void *pcre_stack_malloc(size_t);
PCRE_EXP_DECL void  pcre_stack_free(void *);
PCRE_EXP_DECL int   pcre_callout(pcre_callout_block *);
PCRE_EXP_DECL pcre *pcre_compile(const char *, int, const char **, int *,
                  const unsigned char *);
PCRE_EXP_DECL pcre *pcre_compile2(const char *, int, int *, const char **,
                  int *, const unsigned char *);
PCRE_EXP_DECL int  pcre_config(int, void *);
PCRE_EXP_DECL int  pcre_copy_named_substring(const pcre *, const char *,
                  int *, int, const char *, char *, int);
PCRE_EXP_DECL int  pcre_copy_substring(const char *, int *, int, int,
                  char *, int);
PCRE_EXP_DECL int  pcre_dfa_exec(const pcre *, const pcre_extra *,
                  const char *, int, int, int, int *, int , int *, int);
PCRE_EXP_DECL int  pcre_exec(const pcre *, const pcre_extra *, PCRE_SPTR,
                   int, int, int, int *, int);
PCRE_EXP_DECL void pcre_free_substring(const char *);
PCRE_EXP_DECL void pcre_free_substring_list(const char **);
PCRE_EXP_DECL int  pcre_fullinfo(const pcre *, const pcre_extra *, int,
                  void *);
PCRE_EXP_DECL int  pcre_get_named_substring(const pcre *, const char *,
                  int *, int, const char *, const char **);
PCRE_EXP_DECL int  pcre_get_stringnumber(const pcre *, const char *);
PCRE_EXP_DECL int  pcre_get_substring(const char *, int *, int, int,
                  const char **);
PCRE_EXP_DECL int  pcre_get_substring_list(const char *, int *, int,
                  const char ***);
PCRE_EXP_DECL const unsigned char *pcre_maketables(void);
PCRE_EXP_DECL int  pcre_refcount(pcre *, int);
PCRE_EXP_DECL pcre_extra *pcre_study(const pcre *, int, const char **);
PCRE_EXP_DECL const char *pcre_version(void);